feat(promos): add promo management system with backend and frontend integration
feat: implement promo creation with form, validation, and API integration
feat: add promo routes, services, and schemas in backend
feat: create promo table in database with migrations
feat: add promo listing page in frontend
feat: implement image upload and date handling for promos
feat: add OpenAPI documentation for promo endpoints
feat: add cleanup job for uploads directory
feat: integrate Mantine Dates in frontend
refactor: improve product and category API endpoints
style: enhance mobile responsiveness for users table
chore: update dependencies including dayjs and OpenAPI tools
docs: add API documentation and update README
test: add seed scripts for testing data

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ dist-ssr
 *.sw?
 backend/.env
 frontend/.env
+backend/scripts/run-seed.js
+backend/docs/Guia-Endpoints-OpenAPI-Zod-Prisma.md
+backend/README.md
