--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@prisma/client": "^6.17.1",
     "@supabase/supabase-js": "^2.75.0",
+    "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "express": "^5.1.0",
     "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "resend": "^6.1.2",
