--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "openai": "^6.7.0",
     "resend": "^6.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
