feat(sales): implement sales listing with pagination and public products endpoint
- Add GET /sales endpoint with pagination support
- Create public GET /products/public endpoint for shop
- Update SalesTable component to display paginated sales
- Add shop/.env and shop/node_modules to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ dist-ssr
 *.sw?
 backend/.env
 frontend/.env
+shop/.env
+shop/node_modules
 backend/scripts/run-seed.js
 backend/docs/Guia-Endpoints-OpenAPI-Zod-Prisma.md
 backend/README.md
