--- a/shop/package.json
+++ b/shop/package.json
@@ -16,6 +16,7 @@
     "@mantine/notifications": "^8.3.7",
     "@mantine/nprogress": "^8.3.7",
     "@tanstack/react-query": "^5.90.7",
+    "gsap": "^3.13.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
