feat(sales): add sales analytics dashboard and date filtering
feat(promos): implement promo CRUD operations and table view

feat(products): improve AI product generation flow with notifications

refactor(sales): optimize payment mismatch handling in sales form

chore: add seed scripts for sales and promos data

build: update dependencies including @mantine/charts and recharts

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,11 @@
     "postbuild": "node scripts/copy-static.js",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:sales": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/seed-sales.ts",
+    "seed:users": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/seed-users.ts",
+    "seed:products": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/seed-products.ts",
+    "seed:promos": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/seed-promos.ts"
   },
   "keywords": [],
   "author": "",
