--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,11 +8,11 @@ ARG VITE_API_URL
 ENV VITE_API_URL=$VITE_API_URL
 
 COPY package*.json ./
-RUN npm ci
+RUN npm ci --legacy-peer-deps
 
 COPY . .
 
-RUN npm run build
+RUN npm run build 
 
 FROM node:20-alpine AS runner
 WORKDIR /app
