feat(auth): integrate Clerk authentication with backend synchronization
- Add Clerk authentication to frontend and backend
- Implement token exchange between Clerk and custom backend auth
- Update user schema to support Clerk users
- Add protected routes middleware
- Remove artificial delays from API calls
- Create auth modal and login form components
- Extend user context with Clerk integration

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ shop/node_modules
 backend/scripts/run-seed.js
 backend/docs/Guia-Endpoints-OpenAPI-Zod-Prisma.md
 backend/README.md
+.trae/documents/Arreglar autenticación Clerk y sincronización con backend.md
