build(Dockerfile): add environment variables for API and Clerk
Add NEXT_PUBLIC_API_URL, CLERK_SECRET_KEY, and NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY as build arguments and environment variables to support configuration at build time

--- a/shop/Dockerfile
+++ b/shop/Dockerfile
@@ -18,6 +18,15 @@ FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=development
 
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+
+ARG CLERK_SECRET_KEY
+ENV CLERK_SECRET_KEY=$CLERK_SECRET_KEY
+
+ARG NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+
 # Copiar artefactos de build de Next.js y dependencias
 COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/node_modules ./node_modules
