refactor(docker): change default port from 3001 to 8080 and simplify env handling

--- a/shop/Dockerfile
+++ b/shop/Dockerfile
@@ -3,9 +3,8 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Capturar variables NEXT_* desde Railway
-ARG NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+# Cargar variables de entorno desde archivos .env para el build de Next
+COPY .env* ./
 
 COPY package*.json ./
 RUN npm ci
@@ -16,19 +15,9 @@ RUN npm run build
 
 FROM node:20-alpine AS runner
 WORKDIR /app
-ENV NODE_ENV=development
 
-ARG NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
-
-ARG CLERK_SECRET_KEY
-ENV CLERK_SECRET_KEY=$CLERK_SECRET_KEY
-
-ARG NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
-ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
-
-ARG publishableKey
-ENV publishableKey=$publishableKey
+# Copiar archivos de entorno para que Next los cargue en runtime
+COPY --from=build /app/.env* ./
 
 # Copiar artefactos de build de Next.js y dependencias
 COPY --from=build /app/package.json ./package.json
@@ -38,8 +27,8 @@ COPY --from=build /app/public ./public
 COPY --from=build /app/next.config.ts ./next.config.ts
 
 # Configurar puerto de ejecución
-ENV PORT=3001
-EXPOSE 3001
+ENV PORT=8080
+EXPOSE 8080
 
 # Iniciar Next.js en modo producción
-CMD ["sh", "-c", "npm run start -- -p ${PORT:-3001}"]
+CMD ["sh", "-c", "npm run start -- -p ${PORT:-8080}"]
