--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@clerk/backend": "^2.22.0",
-    "@prisma/client": "^6.17.1",
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "@supabase/supabase-js": "^2.75.0",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
@@ -36,6 +37,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "openai": "^6.7.0",
+    "pg": "^8.11.0",
     "resend": "^6.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -47,10 +49,11 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.2",
+    "@types/pg": "^8.15.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.3",
-    "prisma": "^6.17.1",
+    "prisma": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
