--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "postbuild": "node scripts/copy-static.js",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
+    "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed:sales": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/seed-sales.ts",
     "seed:users": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/seed-users.ts",
@@ -42,7 +43,8 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "prisma": "^7.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -53,7 +55,6 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.3",
-    "prisma": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
