--- a/shop/package.json
+++ b/shop/package.json
@@ -17,6 +17,7 @@
     "@mantine/notifications": "^8.3.7",
     "@mantine/nprogress": "^8.3.7",
     "@tanstack/react-query": "^5.90.7",
+    "dayjs": "^1.11.19",
     "gsap": "^3.13.0",
     "next": "16.0.1",
     "react": "19.2.0",
