--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ backend/scripts/run-seed.js
 backend/docs/Guia-Endpoints-OpenAPI-Zod-Prisma.md
 backend/README.md
 .trae/documents/Arreglar autenticación Clerk y sincronización con backend.md
+shop/src/app/globals.css
