--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,6 @@
   "description": "",
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
-    "@clerk/backend": "^2.22.0",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "@supabase/supabase-js": "^2.75.0",
@@ -39,12 +38,12 @@
     "node-cron": "^4.2.1",
     "openai": "^6.7.0",
     "pg": "^8.11.0",
+    "prisma": "^7.0.0",
     "resend": "^6.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15",
-    "zod": "^4.1.12",
-    "prisma": "^7.0.0"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
