--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ backend/docs/Guia-Endpoints-OpenAPI-Zod-Prisma.md
 backend/README.md
 .trae/documents/Arreglar autenticación Clerk y sincronización con backend.md
 shop/src/app/globals.css
+.trae/documents/Next.js SEO Overhaul Plan.md
