--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ backend/README.md
 .trae/documents/Arreglar autenticación Clerk y sincronización con backend.md
 shop/src/app/globals.css
 .trae/documents/Next.js SEO Overhaul Plan.md
+.trae/documents/SEO Optimization for Home Page.md
