feat(backend): implement Docker setup and enhance email functionality

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ backend/README.md
 shop/src/app/globals.css
 .trae/documents/Next.js SEO Overhaul Plan.md
 .trae/documents/SEO Optimization for Home Page.md
+.env
