--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.16",
     "openai": "^6.7.0",
     "pg": "^8.11.0",
     "prisma": "^7.0.0",
@@ -50,6 +51,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.4",
+    "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.15.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
