feat(promo): add promotion management and validation features
- Introduce promo fields in Orders and Promos models, including discount, promo_code, and promoId.
- Implement migration script to add new fields and indexes in the database.
- Create validation logic for promo codes in the backend, allowing users to apply discounts during order creation.
- Enhance frontend components to support promo code input and display applied promotions.
- Add utility functions for fetching and validating promotions from the server.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "postinstall": "prisma generate",
+    "migration:generate": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/generate-migration.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed:sales": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/seed-sales.ts",
     "seed:users": "ts-node-dev --transpile-only -r tsconfig-paths/register scripts/seed-users.ts",
