--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "express": "^5.1.0",
     "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.6",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
@@ -51,6 +52,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/minio": "^7.1.0",
     "@types/node": "^24.10.4",
     "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.15.6",
